src: Navbar: fix nav z-index

--- a/src/components/common/Navbar/Desktop/desktopNavbar.module.scss
+++ b/src/components/common/Navbar/Desktop/desktopNavbar.module.scss
@@ -13,7 +13,7 @@
 	width: 100%;
 	position: fixed;
 	top: 0;
-	z-index: zIndex(level1);
+	z-index: zIndex(level2);
 	transition: background-color 0.5s ease-in-out, transform 0.15s ease-in-out,
 		padding 0.15s ease-in-out, box-shadow 0.5s ease-in-out;
 
